# FlexInput

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
app/: Cargo.toml
app/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: automap.rs  lib.rs  module.rs  patch.rs  signal.rs
crates/devices/: Cargo.toml
crates/devices/src/: gamepad.rs  gilrs_backend.rs  gyro.rs  hidhide.rs  identification.rs  layouts.rs  lib.rs  midi.rs
crates/engine/: Cargo.toml
crates/engine/src/: eval.rs  graph.rs  lib.rs  router.rs  state.rs  thread.rs
crates/modules/: Cargo.toml
crates/modules/src/: controls.rs  display.rs  generator.rs  lib.rs  logic.rs  math.rs  processing.rs  util.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  lib.rs  process_list.rs
crates/ui/src/canvas/: curve.rs  mod.rs  node.rs  viewer.rs
crates/ui/src/panels/: canvas.rs  mod.rs  physical_devices.rs  virtual_devices.rs
crates/virtual/: Cargo.toml
crates/virtual/src/: layouts.rs  lib.rs  windows.rs
