[package]
name    = "flexinput-ui"
version.workspace = true
edition.workspace = true

[dependencies]
flexinput-core    = { workspace = true }
flexinput-engine  = { workspace = true }
flexinput-devices = { workspace = true }
glam              = { workspace = true }
flexinput-virtual = { workspace = true }
flexinput-modules = { workspace = true }
egui              = { workspace = true }
eframe            = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }
rfd               = { workspace = true }
egui-snarl        = { workspace = true, features = ["serde"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }
