[package]
name    = "flexinput-virtual"
version.workspace = true
edition.workspace = true

[dependencies]
flexinput-core = { workspace = true }

[target.'cfg(windows)'.dependencies]
vigem-client = { version = "0.1", features = ["unstable_ds4"] }
# enigo = "0.2"   # uncomment for virtual keyboard + mouse
